--- a/roles/systemd/tasks/install-defined.yml
+++ b/roles/systemd/tasks/install-defined.yml
@@ -22,6 +22,7 @@
     with_items: "{{ systemd_units }}"
     loop_control:
       label: "{{item.name}}"
+    notify: reload systemd
     when:
       - item.name in check_exec_def
 
@@ -35,6 +36,30 @@
     with_items: "{{ systemd_units }}"
     loop_control:
       label: "{{item.name}}"
+    notify: reload systemd
+    when:
+      - item.timer is defined
+      - item.name in check_exec_def
+
+  - name: Set defined service state
+    service:
+      name: "{{ item.name }}.service"
+      enabled: "{{ item.service.enabled | default(false) }}"
+      state: "{{ 'started' if (item.service.started | default(false)) else 'stopped' }}"
+    with_items: "{{ systemd_units }}"
+    loop_control:
+      label: "{{item.name}}: enabled? {{ item.service.enabled | default(false) }} started? {{ item.service.started | default(false) }}"
+    when:
+      - item.name in check_exec_def
+
+  - name: Set defined timer state
+    service:
+      name: "{{ item.name }}.service"
+      enabled: "{{ item.timer.enabled | default(false) }}"
+      state: "{{ 'started' if (item.timer.started | default(false)) else 'stopped' }}"
+    with_items: "{{ systemd_units }}"
+    loop_control:
+      label: "{{item.name}}: enabled? {{ item.timer.enabled | default(false) }} started? {{ item.timer.started | default(false) }}"
     when:
       - item.timer is defined
       - item.name in check_exec_def
