Fix services getting started instead of timers

--- a/roles/systemd/tasks/install-auto.yml
+++ b/roles/systemd/tasks/install-auto.yml
@@ -189,7 +189,7 @@
 
   - name: Set undefined timer state
     service:
-      name: "{{ item.name }}.service"
+      name: "{{ item.name }}.timer"
       enabled: "{{ item.timer.enabled | default(false) }}"
       state: "{{ 'started' if (item.timer.started | default(false)) else 'stopped' }}"
     with_items: "{{ systemd_units }}"
