--- a/host_vars/server.yml
+++ b/host_vars/server.yml
@@ -6,6 +6,7 @@ postgres_service_name: postgresql-12.service
 node_exporter_web_listen_address: "127.0.0.1:{{ node_exporter_port }}"
 web_root: "/var/www"
 adminer_root: "{{ web_root }}/adminer"
+container_data: "/srv/containers"
 _ports:
   adminer: 54322
   cadvisor: 8081
