--- a/role_vars/systemd.yml
+++ b/role_vars/systemd.yml
@@ -53,7 +53,7 @@ systemd_units:
         description: Borg backup important data to remote location
       service:
         environment:
-          - "CONTAINER_DATA=/srv/containers"
+          - "CONTAINER_DATA={{ container_data }}"
           - "BACKUP_USER={{ my_user }}"
           - "BORG_PASS_FILE=/root/borg_remote.pass"
           - "SSH_USER={{ my_user }}"
@@ -175,7 +175,7 @@ systemd_units:
         after: [ "network.target", "zfs-automount.service", "docker.service" ]
         requires: [ "docker.service" ]
       service:
-        exec_start: [ "bash -c 'docker container start $(< /srv/containers/onboot.txt )'" ]
+        exec_start: [ "bash -c 'docker container start $(< {{ container_data }}/onboot.txt )'" ]
 
   - name: docker-autoupdate
     disabled: yes
@@ -188,7 +188,7 @@ systemd_units:
         user: "{{ my_user }}"
         group: "{{ my_user }}"
         environment:
-          - "CONTAINER_DATA=/srv/containers"
+          - "CONTAINER_DATA={{ container_data }}"
           - "TERM=xterm-256color"
           - "CONTAINER_ENGINE=docker"
     timer:
