--- a/roles/fail2ban/tasks/main.yml
+++ b/roles/fail2ban/tasks/main.yml
@@ -2,21 +2,32 @@
   package:
     name: fail2ban
 
-- name: Copy fail2ban configs
-  copy:
-    src: "{{ item.src }}"
-    dest: "{{ item.dest }}"
-    owner: root
-    group: root
-    mode: 0644
-  with_items:
-    - { src: 'files/jail.local', dest: '/etc/fail2ban/jail.local' }
-    - { src: 'files/filter.d/bitwarden.conf', dest: '/etc/fail2ban/filter.d/bitwarden.conf' }
+- block:
+  - name: Copy bitwarden filter
+    copy:
+      src: "files/filter.d/bitwarden.conf"
+      dest: "/etc/fail2ban/filter.d/bitwarden.conf"
+      owner: root
+      group: root
+      mode: 0644
 
-- name: Fail2ban bitwarden jail template
+  - name: Copy bitwarden jail
+    template:
+      src: "templates/jail.d/bitwarden.local.j2"
+      dest: "/etc/fail2ban/jail.d/bitwarden.local"
+      owner: root
+      group: root
+      mode: 0644
+  
+  when:
+    - ports.bitwarden is defined
+    - ports.bitwarden_notifications is defined
+
+
+- name: Copy global jail
   template:
-    src: templates/jail.d/bitwarden.local.j2
-    dest: /etc/fail2ban/jail.d/bitwarden.local
+    src: "templates/jail.local.j2"
+    dest: "/etc/fail2ban/jail.local"
     owner: root
     group: root
     mode: 0644
