--- a/server.yml
+++ b/server.yml
@@ -3,15 +3,6 @@
   gather_facts: true
   diff: yes
   hosts: server
-  vars_files: 
-    - .secrets/vars.yml
-    - role_vars/nginx.yml
-    - role_vars/cadvisor.yml
-    - role_vars/grafana.yml
-    - role_vars/nginx_exporter.yml
-    - role_vars/node_exporter.yml
-    - role_vars/postgres_exporter.yml
-    - role_vars/prometheus.yml
   vars:
     cadvisor_port: "{{ ports.cadvisor }}"
     cadvisor_skip_install: false
@@ -37,7 +28,7 @@
     samba_skip_install: yes
   tasks:
     - import_role: { name: common }
-      tags: ["all", "common"]
+      tags: ["always", "common"]
 
     - name: Merge ports
       set_fact:
