--- a/roles/sanoid/tasks/install.yml
+++ b/roles/sanoid/tasks/install.yml
@@ -33,6 +33,7 @@
     mode: 0755
     owner: root
     group: root
+    remote_src: yes
   with_items:
     - sanoid
     - syncoid
@@ -54,6 +55,7 @@
     mode: 0755
     owner: root
     group: root
+    remote_src: yes
   with_dict:
     "sanoid.defaults.conf": "sanoid.defaults.conf"
     "sanoid.conf": "sanoid.example.conf"
