--- a/host_vars/server/prometheus.yml
+++ b/host_vars/server/prometheus.yml
@@ -1,6 +1,6 @@
 ---
 tls_ca_file: origin_ca_rsa_root.pem
-desktop_ip: 10.1.0.3
+desktop_ip: desktop.local
 desktop_label: desktop
 server_label: "{{ server_hostname }}"
 prometheus_web_listen_address: "0.0.0.0:{{ prometheus_port }}"
@@ -51,6 +51,13 @@ prometheus_scrape_configs:
         labels:
           instance: "{{ desktop_label }}"
 
+  - job_name: "fah"
+    scrape_interval: 60s
+    static_configs:
+      - targets: ["{{ desktop_ip }}:9659"]
+        labels:
+          instance: "{{ desktop_label }}"
+
   - job_name: 'postgres'
     scrape_interval: 60s
     static_configs:
@@ -68,6 +75,7 @@ prometheus_scrape_configs:
   - job_name: "romeo-tv"
     scheme: https
     scrape_interval: 30s
+    scrape_timeout: 20s
     basic_auth:
       username: "{{ rtv_scrape_user }}"
       password: "{{ rtv_scrape_pass }}"
