Add pip wheel directory variable

--- a/host_vars/server/vars.yml
+++ b/host_vars/server/vars.yml
@@ -28,3 +28,4 @@ smtp_pass: "{{ vault_smtp_pass }}"
 smtp_port: "{{ vault_smtp_port }}"
 smtp_user: "{{ vault_smtp_user }}"
 web_root: "/var/www"
+pip_wheel_dir: "{{ web_root }}/pip"
