Respect skip_install tag

--- a/roles/cadvisor/tasks/main.yml
+++ b/roles/cadvisor/tasks/main.yml
@@ -3,7 +3,9 @@
   become: true
   tags:
     - cadvisor_install
-  when: not cadvisor_skip_install
+  when:
+    - not cadvisor_skip_install
+    - "'skip_install' not in ansible_run_tags"
 
 - include: configure.yml
   become: true
