--- a/roles/node_exporter/tasks/main.yml
+++ b/roles/node_exporter/tasks/main.yml
@@ -3,7 +3,9 @@
   become: true
   tags:
     - node_exporter_install
-  when: not node_exporter_skip_install
+  when:
+    - not node_exporter_skip_install
+    - "'skip_install' not in ansible_run_tags"
 
 - include: configure.yml
   become: true
