--- a/laptop.yml
+++ b/laptop.yml
@@ -8,6 +8,7 @@
     node_exporter_no_sysusers: true
     node_exporter_version: "latest"
     node_exporter_port: "{{ ports.node_exporter }}"
+    node_exporter_collectors: []
   tasks:
     - import_role: { name: common }
       tags: ["all", "common"]
