--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,8 @@
 [*]
 end_of_line = lf
 insert_final_newline = true
+indent_style = space
+indent_size = 4
 
 [*.{py,sh,py.j2, sh.j2}]
 indent_style = space
